cleaning up conflicts
